# contextforge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PHASES.md  PHASE_STUDY_BREAKDOWN.md  README.md  SECURITY.md  STUDY_PREP_PLAN.md  contextforge_dashboard_mockup.html  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: adaptive.py  cache.py  compressor.py  config.py  costs.py  main.py  middleware.py  models.py  proxy.py  router.py  telemetry.py  vector_store.py
app/api/: admin.py
benchmarks/: run_benchmark.py
config/: routing_rules.yaml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  HANDOFF.md  dashboard.html
docs/dashboard/: index.html
docs/dashboard/css/: style.css
docs/dashboard/js/: app.js  ui.js
tests/: conftest.py  test_compressor.py  test_e2e.py  test_failover.py  test_phase3.py  test_proxy.py  test_router.py  test_telemetry.py  test_tool_use.py
tests/fixtures/: compression_test_conversations.json
