[project]
name = "contextforge"
version = "1.0.0"
description = "OpenAI-compatible LLM proxy middleware — LiteLLM multi-provider gateway, semantic caching, intelligent routing, and context compression."
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
